# receipt-toku

./: .gitignore  LICENSE  README.md  check_models.py  config.py  main.py  pyproject.toml
backend/: check_models.py  config.py  main.py  pyproject.toml  rules.py  schemas.py
backend/db/: __init__.py  auth.py  db.py
backend/model/: __init__.py  genai.py  generate.py  prompt.py
backend/schema/: estat.py  parser.py  schemas.py
backend/schemas/: __init__.py  estat.py  parser.py
backend/services/: estat.py  parser.py  vision.py
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: DebugPanel.tsx  Dropzone.tsx  EditHistoryDialog.tsx  EditItemForm.tsx  ErrorBox.tsx  ItemTable.tsx  Loading.tsx  auth-provider.tsx
frontend/src/components/ui/: dialog.tsx  select.tsx
frontend/src/lib/: api.ts  storage.ts  types.ts
frontend/src/pages/: Edit.tsx  History.tsx  Home.tsx  Login.tsx  Result.tsx
frontend/src/styles/: global.css
services/: __init__.py  analyzer.py  estat.py  vision.py
