[project]
name = "receipt-deal-checker"
version = "0.1.0"
description = "Receipt price checker using e-Stat and Gemini"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "pydantic-settings>=2.0.0",
    "Pillow>=10.0.0",
    "python-multipart>=0.0.6",
    "google-generativeai>=0.3.0",
]

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=7.0.0",
]
